mobile view overlap issue fixed

--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ a{
         /* height: 98vh; */
         margin-top: 0;
         padding-top: 0;
-        gap : 1.5rem;
+        /* gap : 1.5rem; */
     }
     .left-content{
         padding-left: 0;
